# find-zen

./: .gitignore  README.md  setup.cfg
.findzen_cache/: organization_index_by_created_at.pickle  organization_index_by_details.pickle  organization_index_by_domain_names.pickle  organization_index_by_external_id.pickle  organization_index_by_id.pickle  organization_index_by_name.pickle  organization_index_by_shared_tickets.pickle  organization_index_by_tags.pickle  organization_index_by_url.pickle  ticket_index_by_assignee_id.pickle  ticket_index_by_created_at.pickle  ticket_index_by_description.pickle  ticket_index_by_due_at.pickle  ticket_index_by_external_id.pickle  ticket_index_by_has_incidents.pickle  ticket_index_by_id.pickle  ticket_index_by_organization_id.pickle  ticket_index_by_priority.pickle  ticket_index_by_status.pickle  ticket_index_by_subject.pickle  ticket_index_by_submitter_id.pickle  ticket_index_by_tags.pickle  ticket_index_by_type.pickle  ticket_index_by_url.pickle  ticket_index_by_via.pickle  user_index_by_active.pickle  user_index_by_alias.pickle  user_index_by_created_at.pickle  user_index_by_email.pickle  user_index_by_external_id.pickle  user_index_by_id.pickle  user_index_by_last_login_at.pickle  user_index_by_locale.pickle  user_index_by_name.pickle  user_index_by_organization_id.pickle  user_index_by_phone.pickle  user_index_by_role.pickle  user_index_by_shared.pickle  user_index_by_signature.pickle  user_index_by_suspended.pickle  (+4 more)
data/: organizations.json  tickets.json  users.json
findzen/: cli.py  file_handler.py  indexer.py  search.py  (+2 more)
(+17 files in other folders)
