[metadata]
name = findzen
version = 1.0.0
description = A simple search cli for user, organisation and ticket data.
author = Nebula ALam
author_email = nebula.alam@gmailcom

[options]
packages = find:
install_requires =
    ilcli==0.3.2
    pydantic==1.8.1

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    findzen = findzen.cli:run

[options.extras_require]
dev =
    pytest==6.2.2
